--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
@@ -119,7 +119,7 @@
 
                         <div class="row">
                 <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/hot-drinks.png" alt="Hot Drinks"></div>
+                    <div class="menu-images "><img src="img/menu/Ceviche.jpg" alt="Hot Drinks"></div>
                     <div class="menu-titles"><h1 class="">Ceviches</h1></div>
                     <div class="menu-items ">
                         <ul>
@@ -134,8 +134,8 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/ice-drinks.png" alt="Ice Drinks"></div>
-                    <div class="menu-titles"><h1 class="">Cocteles</h1></div>
+                    <div class="menu-images "><img src="img/menu/Coctel.jpg" alt="Ice Drinks"></div>
+                    <div class="menu-titles"><h1 class="">Cocteles/Cocktails</h1></div>
                     <div class="menu-items ">
                         <ul>
                             <li>Camaron</li>
@@ -147,8 +147,8 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/smoothies.png" alt="Smoothies"></div>
-                    <div class="menu-titles"><h1 class="">Camarones</h1></div>
+                    <div class="menu-images "><img src="img/menu/CamaronesEMP.jpg" alt="Smoothies"></div>
+                    <div class="menu-titles"><h1 class="">Camarones/Shrimps</h1></div>
                     <div class="menu-items ">
                         <ul>
                             <li>Empanizado</li>
@@ -160,8 +160,8 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/deserts.png" alt="Deserts"></div>
-                    <div class="menu-titles"><h1 class="">Orden de pollo y puerco al gusto</h1></div>
+                    <div class="menu-images "><img src="img/menu/pollo.jpg" alt="Deserts"></div>
+                    <div class="menu-titles"><h1 class="">Orden de pollo y puerco al gusto/Order chicken and pork to taste</h1></div>
                     <div class="menu-items ">
 
                     </div>
@@ -170,8 +170,8 @@
 
             <div class="row">
                 <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/cocktails.png" alt="Hot Drinks"></div>
-                    <div class="menu-titles"><h1 class="">Filetes</h1></div>
+                    <div class="menu-images "><img src="img/menu/Empanizado.jpg" alt="Hot Drinks"></div>
+                    <div class="menu-titles"><h1 class="">Filetes/Steaks</h1></div>
                     <div class="menu-items ">
                         <ul>
                             <li>Empanizado</li>
@@ -183,8 +183,8 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/beer.png" alt="Ice Drinks"></div>
-                    <div class="menu-titles"><h1 class="">Otros</h1></div>
+                    <div class="menu-images "><img src="img/menu/sopa.jpg" alt="Ice Drinks"></div>
+                    <div class="menu-titles"><h1 class="">Otros/Others</h1></div>
                     <div class="menu-items ">
                         <ul>
                             <li>Sopa de mariscos</li>
@@ -197,38 +197,84 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/wine.png" alt="Smoothies"></div>
-                    <div class="menu-titles"><h1 class="">Wine</h1></div>
+                    <div class="menu-images "><img src="img/menu/beer.png" alt="Smoothies"></div>
+                    <div class="menu-titles"><h1 class="">Cerveza/Beer</h1></div>
                     <div class="menu-items ">
                         <ul>
-                            <li>Sweet Red</li>
-                            <li>Dry Red</li>
-                            <li>Sweet White</li>
-                            <li>Dry White</li>
-                            <li>Rose</li>
-                            <li>Sparkling Wine</li>
-                            <li>Fortified Wine</li>
-                            <li>Frutty Red</li>
+                            <li>Sol</li>
+                            <li>Tecate Light</li>
+                            <li>XX Laguer</li>
+                            <li>Chelada</li>
+                            <li>Michelada Clasica</li>
+                            <li>Ojo rojo</li>
+                            <li>Michelada de mango/tamarindo...</li>
+                            <li>Chamochela</li>
+                            <li>Chamoychela</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/menu/cocktails.png" alt="Deserts"></div>
+                    <div class="menu-titles"><h1 class="">Preparados/Prepared</h1></div>
+                    <div class="menu-items ">
+                        <ul>
+                            <li>Margarita</li>
+                            <li>Piña Colada</li>
+                            <li>Piñada</li>
+                            <li>Daiquiris</li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+              </div>
+                <div class="row">
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/menu/ron.jpg" alt="Deserts"></div>
+                    <div class="menu-titles"><h1 class="">Ron</h1></div>
+                    <div class="menu-items ">
+                        <ul>
+                            <li>Bacardi Blanco</li>
+                            <li>Bacardi añejo</li>
+                            <li>Bacardi solera</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/menu/vodka.jpg" alt="Deserts"></div>
+                    <div class="menu-titles"><h1 class="">Vodka</h1></div>
+                    <div class="menu-items ">
+                        <ul>
+                            <li>Smirnoff</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/menu/wine.png" alt="Deserts"></div>
+                    <div class="menu-titles"><h1 class="">Brandy</h1></div>
+                    <div class="menu-items ">
+                        <ul>
+                            <li>Azteca de Oro</li>
+                            <li>Presidente</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-3 col-md-3">
                     <div class="menu-images "><img src="img/menu/sprites.png" alt="Deserts"></div>
-                    <div class="menu-titles"><h1 class="">Sprites</h1></div>
+                    <div class="menu-titles"><h1 class="">Aguas o Refrescos/Sodas or Natural Juice</h1></div>
                     <div class="menu-items ">
                         <ul>
-                            <li>Whisky</li>
-                            <li>Rum</li>
-                            <li>Tequila</li>
-                            <li>Gin</li>
-                            <li>Champagne</li>
-                            <li>Brandy</li>
-                            <li>Absinthe</li>
-                            <li>Liqueur</li>
+                            <li>Jamaica</li>
+                            <li>Limonada</li>
+                            <li>Horchata</li>
+                            <li>Coca-Cola</li>
+                            <li>Coca-Cola Light</li>
+                            <li>Cristal</li>
                         </ul>
                     </div>
                 </div>
-            </div>
+              </div>
 
         </div>
         <!-- /.container -->
