--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
@@ -23,7 +23,7 @@
 			<div class="logo_container">
 				<div class="logo">
 					<img src="images/logo1.png" alt="">
-					<span>course</span>
+					<span>Colegio del Mayab A.C.</span>
 				</div>
 			</div>
 
@@ -40,7 +40,7 @@
 		</div>
 		<div class="header_side d-flex flex-row justify-content-center align-items-center">
 			<img src="images/phone-call.svg" alt="">
-			<span>+43 4566 7788 2457</span>
+			<span>923 5614 - 924 9170</span>
 		</div>
 
 		<!-- Hamburger -->
@@ -62,12 +62,9 @@
 		<div class="menu_inner menu_mm">
 			<div class="menu menu_mm">
 				<ul class="menu_list menu_mm">
-					<li class="menu_item menu_mm"><a href="index.html">Home</a></li>
-					<li class="menu_item menu_mm"><a href="#">About us</a></li>
-					<li class="menu_item menu_mm"><a href="courses.html">Courses</a></li>
-					<li class="menu_item menu_mm"><a href="elements.html">Elements</a></li>
-					<li class="menu_item menu_mm"><a href="news.html">News</a></li>
-					<li class="menu_item menu_mm"><a href="#">Contact</a></li>
+					<li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
+					<li class="menu_item menu_mm"><a href="#">Quienes Somos</a></li>
+					<li class="menu_item menu_mm"><a href="#">Contacto</a></li>
 				</ul>
 
 				<!-- Menu Social -->
@@ -77,8 +74,8 @@
 						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-pinterest"></i></a></li>
 						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
 						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-instagram"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-twitter"></i></a></li>
+						<li class="menu_social_item menu_mm"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs"><i class="fab fa-facebook-f"></i></a></li>
+						<li class="menu_social_item menu_mm"><a href="https://twitter.com/adventistiad"><i class="fab fa-twitter"></i></a></li>
 					</ul>
 				</div>
 
@@ -96,7 +93,7 @@
 			<div class="home_background prlx" style="background-image:url(images/contact_background.jpg)"></div>
 		</div>
 		<div class="home_content">
-			<h1>Contact</h1>
+			<h1>Contacto</h1>
 		</div>
 	</div>
 
@@ -109,24 +106,26 @@
 
 					<!-- Contact Form -->
 					<div class="contact_form">
-						<div class="contact_title">Get in touch</div>
+						<div class="contact_title">Envianos un mensaje</div>
 
 						<div class="contact_form_container">
 							<form action="post">
-								<input id="contact_form_name" class="input_field contact_form_name" type="text" placeholder="Name" required="required" data-error="Name is required.">
-								<input id="contact_form_email" class="input_field contact_form_email" type="email" placeholder="E-mail" required="required" data-error="Valid email is required.">
-								<textarea id="contact_form_message" class="text_field contact_form_message" name="message" placeholder="Message" required="required" data-error="Please, write us a message."></textarea>
-								<button id="contact_send_btn" type="button" class="contact_send_btn trans_200" value="Submit">send message</button>
+								<input id="contact_form_name" class="input_field contact_form_name" type="text" placeholder="Nombre" required="required" data-error="Ingresa un nombre">
+								<input id="contact_form_email" class="input_field contact_form_email" type="email" placeholder="E-mail" required="required" data-error="E-mail invalido">
+								<textarea id="contact_form_message" class="text_field contact_form_message" name="message" placeholder="Mensaje" required="required" data-error="Por favor, escribe un mansaje"></textarea>
+								<button id="contact_send_btn" type="button" class="contact_send_btn trans_200" value="Submit">ENVIAR</button>
 							</form>
 						</div>
 					</div>
 
 				</div>
 
+
+
 				<div class="col-lg-4">
 					<div class="about">
 						<div class="about_title">Join Courses</div>
-						<p class="about_text">In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum. Etiam eu purus nec eros varius luctus. Praesent finibus risus facilisis ultricies. Etiam eu purus nec eros varius luctus.</p>
+						<img src="images/contacto.jpg" width="350" height="390">
 
 						<div class="contact_info">
 							<ul>
@@ -134,18 +133,19 @@
 									<div class="contact_info_icon">
 										<img src="images/placeholder.svg" alt="https://www.flaticon.com/authors/lucy-g">
 									</div>
-									Blvd Libertad, 34 m05200 Arévalo
+									Calle 74 #553 B x 71 y 73 col. Centro (21,63 km)
+									97000 Mérida
 								</li>
 								<li class="contact_info_item">
 									<div class="contact_info_icon">
 										<img src="images/smartphone.svg" alt="https://www.flaticon.com/authors/lucy-g">
 									</div>
-									0034 37483 2445 322
+									923 5614 - 924 9170
 								</li>
 								<li class="contact_info_item">
 									<div class="contact_info_icon">
 										<img src="images/envelope.svg" alt="https://www.flaticon.com/authors/lucy-g">
-									</div>hello@company.com
+									</div><a href="mailto:recepcioncolmay@hotmail.com?subject=feedback">Correo </a>
 								</li>
 							</ul>
 						</div>
@@ -212,8 +212,8 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<img src="images/logo.png" alt="">
-								<span>course</span>
+								<img src="images/logo1.png" alt="">
+								<span>Colegio del Mayab A.C.</span>
 							</div>
 						</div>
 
@@ -227,11 +227,9 @@
 						<div class="footer_column_title">Menu</div>
 						<div class="footer_column_content">
 							<ul>
-								<li class="footer_list_item"><a href="index.html">Home</a></li>
-								<li class="footer_list_item"><a href="#">About Us</a></li>
-								<li class="footer_list_item"><a href="courses.html">Courses</a></li>
-								<li class="footer_list_item"><a href="news.html">News</a></li>
-								<li class="footer_list_item"><a href="#">Contact</a></li>
+								<li class="footer_list_item"><a href="index.html">Inicio</a></li>
+								<li class="footer_list_item"><a href="nosotros.html">Quienes Somos</a></li>
+								<li class="footer_list_item"><a href="#">Contacto</a></li>
 							</ul>
 						</div>
 					</div>
@@ -242,11 +240,10 @@
 						<div class="footer_column_title">Enlaces Externos</div>
 						<div class="footer_column_content">
 							<ul>
-								<li class="footer_list_item"><a href="#">Testimonials</a></li>
 								<li class="footer_list_item"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs">Facebook</a></li>
-								<li class="footer_list_item"><a href="#">Espacio 1</a></li>
-								<li class="footer_list_item"><a href="#">Espacio 2</a></li>
-								<li class="footer_list_item"><a href="#">Espacio 3</a></li>
+								<li class="footer_list_item"><a href="https://twitter.com/adventistiad">Twitter</a></li>
+								<li class="footer_list_item"><a href="https://www.interamerica.org/es/department/educacion/">Iglesia Adventista del Septimo Dia</a></li>
+
 							</ul>
 						</div>
 					</div>
@@ -254,7 +251,7 @@
 					<!-- Footer Column - Contact -->
 
 					<div class="col-lg-3 footer_col">
-						<div class="footer_column_title">Contact</div>
+						<div class="footer_column_title">Contacto</div>
 						<div class="footer_column_content">
 							<ul>
 								<li class="footer_contact_item">
@@ -292,11 +289,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 				<div class="footer_social ml-sm-auto">
 					<ul class="menu_social">
-						<li class="menu_social_item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
+						<!--<li class="menu_social_item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
 						<li class="menu_social_item"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-						<li class="menu_social_item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-						<li class="menu_social_item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-						<li class="menu_social_item"><a href="#"><i class="fab fa-twitter"></i></a></li>
+						<li class="menu_social_item"><a href="#"><i class="fab fa-instagram"></i></a></li> -->
+						<li class="menu_social_item"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs"><i class="fab fa-facebook-f"></i></a></li>
+						<li class="menu_social_item"><a href="https://twitter.com/adventistiad"><i class="fab fa-twitter"></i></a></li>
 					</ul>
 				</div>
 			</div>
