--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
@@ -46,9 +46,8 @@
             </a></div>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#story">Story</a></li>
 
-                <li><a href="#food-menu">Food Menu</a></li>
+                <li><a hrfe="#Administracion">Administracion</a></li>
 
                 <!--fix for scroll spy active menu element-->
                 <li style="display:none;"><a href="#header"></a></li>
@@ -76,27 +75,27 @@
         <section class="ss-style-top"></section>
         <div class="container inner">
             <h2 class="section-title text-center">Un poco de nuestra historia</h2>
-            <p class="lead main text-center">We're cooking delecious foods since 1879</p>
+            <p class="lead main text-center">Contamos Con 19 Años De Experiencia En Servicio y Calidad. </p>
             <div class="row text-center story">
                 <div class="col-sm-4">
                     <div class="col-wrapper">
                         <div class="icon-wrapper"> <i class="fa fa-anchor"></i> </div>
-                        <h3>EST. 1879</h3>
-                        <p>Vivamus sagittis lacuson augue laoreet rutrum faucibus dolor auctor. Cras mattis consectetur purus sit amet fermentum ultricies vehicula.</p>
+                        <h3>Marisquería</h3>
+                        <p></p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="col-wrapper">
                         <div class="icon-wrapper"> <i class="fa  fa-cutlery"></i> </div>
-                        <h3>Cooking Traditions</h3>
-                        <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cum sociis natoque penatibus et magnis dis parturient monte nascetur ultricies vehicula. </p>
+                        <h3></h3>
+                        <p>Nos Especializamos En Mariscos y Otra Variedad De Comidas. </p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="col-wrapper">
                         <div class="icon-wrapper"> <i class="fa fa-coffee"></i> </div>
-                        <h3>Food Quality</h3>
-                        <p>Curabitur blandit matti tempus porttitor. Donec id elit non mi porta ut gravida at eget metus. Consectetur adipiscing elit ultricies vehicula.</p>
+                        <h3>Sobre nosotros</h3>
+                        <p>Contamos Con Atencion Personal De Sus Propietarios Amada Guadalupe Novelo Adrian y Cresencio Jesus Sanchez Martinez.</p>
                     </div>
                 </div>
             </div>
@@ -114,8 +113,8 @@
     <div id="food-menu" class="light-wrapper">
         <section class="ss-style-top"></section>
         <div class="container inner">
-            <h2 class="section-title text-center">Food Menu</h2>
-            <p class="lead main text-center">There is no sincerer love than the love of food!</p>
+            <h2 class="section-title text-center">Menu</h2>
+            <p class="lead main text-center">Contamos con un extenso menu</p>
 
                         <div class="row">
                 <div class="col-sm-3 col-md-3">
@@ -300,16 +299,13 @@
         <div class="container inner">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; Copyright MeatKing 2014
-                    <br/>Theme By <a class="themeBy" href="http://www.Themewagon.com">ThemeWagon</a>
+                    &copy; Contactanos al:
+                    <br/>99999999999  <a class="themeBy" href=""></a>
                 </div>
                 <div class="col-sm-6">
                     <div class="social-bar">
-                        <a href="#" class="fa fa-instagram tooltipped" title=""></a>
-                        <a href="#" class="fa fa-youtube-square tooltipped" title=""></a>
-                        <a href="#" class="fa fa-facebook-square tooltipped" title=""></a>
-                        <a href="#" class="fa fa-pinterest-square tooltipped" title=""></a>
-                        <a href="#" class="fa fa-google-plus-square tooltipped" title=""></a>
+                        <a href="https://www.facebook.com/LupitayChencho/" class="fa fa-facebook-square tooltipped" title=""></a>
+                        <a href="https://www.google.com.mx/maps/place/Los+Barriles/@21.2925863,-89.6049421,16z/data=!4m5!3m4!1s0x8f55c4c817f58611:0x96d4ed16e2fc828e!8m2!3d21.2944476!4d-89.6057743" class="fa fa-google-plus-square tooltipped" title=""></a>
                     </div>
                 </div>
             </div>
