--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
@@ -89,25 +89,18 @@
 	</div>
 
 	<!-- Home -->
-
-
-
-	<!-- Popular -->
-
 	<div class="popular page_section">
 		<div class="container">
 			<div class="row">
 				<div class="col">
 					<div class="section_title text-center">
 						<h1></h1>
-						<h1></h1>
-						<h1></h1>
-						<h1>Nosotros</h1>
 					</div>
 				</div>
 			</div>
 
 			<div class="row course_boxes">
+
 
 <div class="slider">
 <ul>
@@ -118,6 +111,29 @@
 
 </ul>
 </div>
+
+
+
+<!-- Popular -->
+
+<div class="popular page_section">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<div class="section_title text-center">
+					<h1>Nosotros</h1>
+				</div>
+			</div>
+		</div>
+
+		<div class="row course_boxes">
+
+
+
+
+
+				
+					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 
 
 	<!-- Footer -->
@@ -131,7 +147,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="section_title text-center">
-							<h1>Subscribe to newsletter</h1>
+							<h1>Recibir informacion de la escuela</h1>
 						</div>
 					</div>
 				</div>
@@ -192,11 +208,9 @@
 						<div class="footer_column_title">Enlaces Externos</div>
 						<div class="footer_column_content">
 							<ul>
-								<li class="footer_list_item"><a href="#">Testimonials</a></li>
+
 								<li class="footer_list_item"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs">Facebook</a></li>
 								<li class="footer_list_item"><a href="#">Espacio 1</a></li>
-								<li class="footer_list_item"><a href="#">Espacio 2</a></li>
-								<li class="footer_list_item"><a href="#">Espacio 3</a></li>
 							</ul>
 						</div>
 					</div>
