--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
@@ -107,7 +107,7 @@
 	<li><img src="images/port1.png" alt=""</li>
 	<li><img src="images/port2.jpg" alt=""</li>
 	<li><img src="images/port3.jpg" alt=""</li>
-	<li><img src="images/port4.jpg" alt=""</li>
+	<li><img src="images/port4.png" alt=""</li>
 
 </ul>
 </div>
@@ -128,11 +128,20 @@
 
 		<div class="row course_boxes">
 
+			<div class="contenedor">
+				<p>Nosotros</p>
+				<ul>
+					<li>Cambiamos</li>
+					<li>Logramos</li>
+					<li>Somos MAYAB</li>
+				</ul>
+
+			</div>
 
 
 
 
-				
+
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 
 
