Logo e imagenes index actualizado

--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -102,10 +102,10 @@
 
 				<!-- Hero Slide -->
 				<div class="hero_slide">
-					<div class="hero_slide_background" style="background-image:url(images/slider_background.jpg)"></div>
+					<div class="hero_slide_background" style="background-image:url(images/slider_background1.png)"></div>
 					<div class="hero_slide_container d-flex flex-column align-items-center justify-content-center">
 						<div class="hero_slide_content text-center">
-							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut"><span>Educación Adventista</span></h1>
+							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut"><span></span></h1>
 						</div>
 					</div>
 				</div>
@@ -115,17 +115,17 @@
 					<div class="hero_slide_background" style="background-image:url(images/slider_background.jpg)"></div>
 					<div class="hero_slide_container d-flex flex-column align-items-center justify-content-center">
 						<div class="hero_slide_content text-center">
-							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut"><span>Eres Bienvenido</span></h1>
+							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut"><span></span></h1>
 						</div>
 					</div>
 				</div>
 
 				<!-- Hero Slide -->
 				<div class="hero_slide">
-					<div class="hero_slide_background" style="background-image:url(images/slider_background.jpg)"></div>
+					<div class="hero_slide_background" style="background-image:url(images/slider_background2.jpg)"></div>
 					<div class="hero_slide_container d-flex flex-column align-items-center justify-content-center">
 						<div class="hero_slide_content text-center">
-							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut"><span>Te Esperamos!</span></h1>
+							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut"><span></span></h1>
 						</div>
 					</div>
 				</div>
@@ -148,31 +148,11 @@
 							<img src="images/earth-globe.svg" class="svg" alt="">
 							<div class="hero_box_content">
 								<h2 class="hero_box_title">Inscripciones</h2>
-								<a href="courses.html" class="hero_box_link">view more</a>
+								<a href="#" class="hero_box_link" onclick="alert('Estamos trabajando en ello!!')">ver más</a>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-lg-4 hero_box_col">
-						<div class="hero_box d-flex flex-row align-items-center justify-content-start">
-							<img src="images/books.svg" class="svg" alt="">
-							<div class="hero_box_content">
-								<h2 class="hero_box_title">Our Library</h2>
-								<a href="courses.html" class="hero_box_link">view more</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 hero_box_col">
-						<div class="hero_box d-flex flex-row align-items-center justify-content-start">
-							<img src="images/professor.svg" class="svg" alt="">
-							<div class="hero_box_content">
-								<h2 class="hero_box_title">Profesores</h2>
-								<a href="teachers.html" class="hero_box_link">view more</a>
-							</div>
-						</div>
-					</div>
-
+					
 				</div>
 			</div>
 		</div>
