--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Programa2.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Programa2.html
@@ -2,12 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="programa2.js">
+    <script type="text/javascript" src="programa2.js"> <!-- llama al programa 2 y lo pone en forma de  alerta-->
 
     </script>
     <title></title>
   </head>
   <body>
-
+    <div id="divGrupo">
+        <form>
+            <input type="number" id="inputGrupo" min="1" max="100">  <!--minimo y maximo de alumnos-->
+            <button id="buttonGrupo" onclick="leerCalificaciones()">Agregar</button> <!-- agregar botor de agregar alumnos -->
+        </form>
+    </div>
   </body>
 </html>
