--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Programa03.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Programa03.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <link href="bootstrap-4.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="bootstrap-4.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/> <!--librerias-->
         <script src="bootstrap-4.1.3/dist/js/bootstrap.min.js" type="text/javascript"></script>
   <body>
 
@@ -17,21 +17,21 @@
       <div id="divContenedor">
           <div id="divFormulario"> <!--Formulario-->
             <form class="form-inline">
-                <input name="inputUserName" id="inputUserName" type="text" size="20" placeholder="Inserta Texto"> <br>
-                <input name="radio1" type="radio" value="1"> Chocolate <br>
+                <input name="inputUserName" id="inputUserName" type="text" size="20" placeholder="Inserta Texto"> <br> <!--ingregar texto -->
+                <input name="radio1" type="radio" value="1"> Chocolate <br><!--seleccionar normbre escrito-->
                 <input name="radio2" type="radio" value="1"> Pastel <br>
                 <input name="radio3" type="radio" value="1"> Nutella <br>
                 <input name="radio4" type="radio" value="1"> Vainilla <br>
 
-                <input type="number" name="" value=""> <br>
-                <input type="date" name="" value=""> <br>
-                <input type="email" name="" value=""> <br>
-                <input type="color" name="" value=""> <br>
-                <input type="file" name="" value=""> <br>
-                <input type="password" name="" value=""> <br>
-                <input type="search" name="" value=""> <br>
+                <input type="number" name="" value=""> <br> <!--seleccionar numero-->
+                <input type="date" name="" value=""> <br> <!--seleccionar fecha-->
+                <input type="email" name="" value=""> <br><!--ingresar email-->
+                <input type="color" name="" value=""> <br><!--seleccionar color-->
+                <input type="file" name="" value=""> <br> <!--seleccionar formato-->
+                <input type="password" name="" value=""> <br> <!--ingresar contraseña-->
+                <input type="search" name="" value=""> <br><!--buscador-->
 
-                <input type="submit" value="Enviar Informacion">
+                <input type="submit" value="Enviar Informacion"> <!--botos con el nombre enviar informacion-->
             </form>
           </div>
       </div>
