--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Programa4/index.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Programa4/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>TODO supply a title</title>
+      <title>TODO supply a title</title> <!--titulo de la pagina-->
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1">  <!--librerias-->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        
+
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse">     <!-- ace adaptable la pagina para que sea chica igual-->
             <div class="container-fluid">
                 <div class="nav-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse">
-                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>      <!-- tres rallitas cuando -->
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="">Inicio</a>
+                    <a class="navbar-brand" href="">Inicio</a> <!--pestaña de inicio-->
                 </div>
-                <div class="collapse navbar-collapse" id="navCollapse">
+                <div class="collapse navbar-collapse" id="navCollapse">     <!-- cuadno el navegador se hace chico hace que estas pestañas se junten en un "menu"-->
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="www.google.com">Control Escolar</a></li>
                         <li><a href="www.google.com">Alumnos</a></li>
