--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Programa5.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Programa5.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>  <!--librerias-->
         <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
         <link type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet"/>
     <script>
-      $(document).ready(function(){
+      $(document).ready(function(){     <!-- cuando la pagina esta lista hace funcion de id una datatable -->
         $('#TableExample').DataTable();
       });
     </script>
-    <title>TODO supply a title</title>
+    <title>TODO supply a title</title>   <!--titulo de la pagina-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
-    <div>Datable Example</div>
+    <div>Datable Example</div>   <!--tabla-->
     <table id="TableExample" class="display" style="width:100%">
       <!--Encabezado-->
       <thead>
