actualizado nav bar y servicios

--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -65,12 +65,9 @@
 		<div class="menu_inner menu_mm">
 			<div class="menu menu_mm">
 				<ul class="menu_list menu_mm">
-					<li class="menu_item menu_mm"><a href="#">Home</a></li>
-					<li class="menu_item menu_mm"><a href="#">About us</a></li>
-					<li class="menu_item menu_mm"><a href="courses.html">Courses</a></li>
-					<li class="menu_item menu_mm"><a href="elements.html">Elements</a></li>
-					<li class="menu_item menu_mm"><a href="news.html">News</a></li>
-					<li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
+					<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
+					<li class="main_nav_item"><a href="contact.html">Contactanos</a></li>
+
 				</ul>
 
 				<!-- Menu Social -->
@@ -166,7 +163,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title text-center">
-						<h1>Our Services</h1>
+						<h1>Nuestros Servicios</h1>
 					</div>
 				</div>
 			</div>
@@ -177,7 +174,7 @@
 					<div class="icon_container d-flex flex-column justify-content-end">
 						<img src="images/earth-globe.svg" alt="">
 					</div>
-					<h3>Online Courses</h3>
+					<h3>Kinder</h3>
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 				</div>
 
@@ -185,7 +182,7 @@
 					<div class="icon_container d-flex flex-column justify-content-end">
 						<img src="images/exam.svg" alt="">
 					</div>
-					<h3>Indoor Courses</h3>
+					<h3>Primaria</h3>
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 				</div>
 
@@ -193,7 +190,7 @@
 					<div class="icon_container d-flex flex-column justify-content-end">
 						<img src="images/books.svg" alt="">
 					</div>
-					<h3>Amazing Library</h3>
+					<h3>Secundaria</h3>
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 				</div>
 
@@ -201,25 +198,11 @@
 					<div class="icon_container d-flex flex-column justify-content-end">
 						<img src="images/professor.svg" alt="">
 					</div>
-					<h3>Exceptional Professors</h3>
+					<h3>Preparatoria</h3>
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 				</div>
 
-				<div class="col-lg-4 service_item text-left d-flex flex-column align-items-start justify-content-start">
-					<div class="icon_container d-flex flex-column justify-content-end">
-						<img src="images/blackboard.svg" alt="">
-					</div>
-					<h3>Top Programs</h3>
-					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
-				</div>
 
-				<div class="col-lg-4 service_item text-left d-flex flex-column align-items-start justify-content-start">
-					<div class="icon_container d-flex flex-column justify-content-end">
-						<img src="images/mortarboard.svg" alt="">
-					</div>
-					<h3>Graduate Diploma</h3>
-					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
-				</div>
 
 			</div>
 		</div>
@@ -237,7 +220,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title text-center">
-						<h1>What our students say</h1>
+						<h1>Que opinan nuestros estudiantes?</h1>
 					</div>
 				</div>
 			</div>
@@ -260,7 +243,7 @@
 											<img src="images/testimonials_user.jpg" alt="">
 										</div>
 										<div class="testimonial_name">james cooper</div>
-										<div class="testimonial_title">Graduate Student</div>
+										<div class="testimonial_title">Estudiante graduado</div>
 									</div>
 								</div>
 							</div>
