--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -339,15 +339,15 @@
 
 							<div class="col-lg-2 order-lg-1 order-2">
 								<div class="event_date d-flex flex-column align-items-center justify-content-center">
-									<div class="event_day">07</div>
-									<div class="event_month">January</div>
+									<div class="event_day">25</div>
+									<div class="event_month">Febrero</div>
 								</div>
 							</div>
 
 							<div class="col-lg-6 order-lg-2 order-3">
 								<div class="event_content">
-									<div class="event_name"><a class="trans_200" href="#">Open day in the Univesrsity campus</a></div>
-									<div class="event_location">Grand Central Park</div>
+									<div class="event_name"><a class="trans_200" href="">Semana de oración</a></div>
+									<div class="event_location">Iglesia central</div>
 									<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor.</p>
 								</div>
 							</div>
@@ -410,7 +410,7 @@
 							<form action="post">
 								<div class="newsletter_form d-flex flex-md-row flex-column flex-xs-column align-items-center justify-content-center">
 									<input id="newsletter_email" class="newsletter_email" type="email" placeholder="Email Address" required="required" data-error="Valid email is required.">
-									<button id="newsletter_submit" type="submit" class="newsletter_submit_btn trans_300" value="Submit">Subscribe</button>
+									<button id="newsletter_submit" type="submit" class="newsletter_submit_btn trans_300" value="Submit" onclick="alert('E-mail registrado')">Subscribete</button>
 								</div>
 							</form>
 						</div>
@@ -445,11 +445,9 @@
 						<div class="footer_column_title">Menu</div>
 						<div class="footer_column_content">
 							<ul>
-								<li class="footer_list_item"><a href="#">Home</a></li>
-								<li class="footer_list_item"><a href="#">About Us</a></li>
-								<li class="footer_list_item"><a href="courses.html">Courses</a></li>
-								<li class="footer_list_item"><a href="news.html">News</a></li>
-								<li class="footer_list_item"><a href="contact.html">Contact</a></li>
+								<li class="footer_list_item"><a href="nosotros.html">Acerca de nosotros</a></li>
+								<li class="footer_list_item"><a href="contact.html">Contactanos</a></li>
+
 							</ul>
 						</div>
 					</div>
