nav bar responsive actualizado

--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
@@ -62,9 +62,8 @@
 		<div class="menu_inner menu_mm">
 			<div class="menu menu_mm">
 				<ul class="menu_list menu_mm">
-					<li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
-					<li class="menu_item menu_mm"><a href="#">Quienes Somos</a></li>
-					<li class="menu_item menu_mm"><a href="#">Contacto</a></li>
+					<li class="main_nav_item"><a href="index.html">Inicio</a></li>
+					<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
 				</ul>
 
 				<!-- Menu Social -->
