--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
@@ -102,15 +102,7 @@
 			<div class="row course_boxes">
 
 
-<div class="slider">
-<ul>
-	<li><img src="images/port1.png" alt=""</li>
-	<li><img src="images/port2.jpg" alt=""</li>
-	<li><img src="images/port3.jpg" alt=""</li>
-	<li><img src="images/port4.png" alt=""</li>
 
-</ul>
-</div>
 
 
 
@@ -126,24 +118,17 @@
 			</div>
 		</div>
 
-		<div class="row course_boxes">
-
-			<div class="contenedor">
-				<p>Nosotros</p>
-				<ul>
-					<li>Cambiamos</li>
-					<li>Logramos</li>
-					<li>Somos MAYAB</li>
-				</ul>
-
-			</div>
 
 
+              <p>La Red de Educación Adventista es administrada por la Iglesia Adventista del Séptimo Día y está presente en más de 150 países con cerca de 1,5 millones de estudiantes. En América del Sur,
+								 hay más de 270.000 estudiantes en 871 instituciones educativas (escuelas, colegios y universidades) y }má
+								  de 18 mil profesores.</p>
 
 
-
-					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
-
+					<p>La educación adventista transmite no solo conocimiento académico, sino que además promueve el desarrollo equilibrado e integral de las personas – espiritual, intelectual, físico y social.
+						 La filosofía adventista de la educación se fundamenta en Cristo, por lo que los adventistas creen que bajo la guía del Espíritu Santo, el carácter y los propósitos a desarrollar son los de
+						  una vida de fe en Dios y respeto por la dignidad de todos los seres humanos.</p>
+							</p>
 
 	<!-- Footer -->
 
