--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -34,7 +34,7 @@
 			<nav class="main_nav_container">
 				<div class="main_nav">
 					<ul class="main_nav_list">
-						<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
+						<li class="main_nav_item"><a href="we.html">Acerca de nosotros</a></li>
 						<li class="main_nav_item"><a href="contact.html">Contactanos</a></li>
 
 					</ul>
