--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/we.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/we.html
@@ -42,6 +42,9 @@ https://templatemo.com/tm-526-vanilla
                 <div class="primary-button">
                     <a href="#services">Descubrelo Ahora</a>
                 </div>
+                <div class="primary-button">
+                    <a href="index.html">Ir a Inicio</a>
+                </div>
             </div>
         </div>
     </div>
