--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/we.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/we.html
@@ -27,11 +27,9 @@ https://templatemo.com/tm-526-vanilla
     <div class="fixed-side-navbar">
         <ul class="nav flex-column">
             <li class="nav-item"><a class="nav-link" href="#home"><span>Intro</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="#services"><span>Services</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="#portfolio"><span>Portfolio</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="#our-story"><span>Our Story</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="#contact-us"><span>Contact Us</span></a></li>
-        </ul>
+            <li class="nav-item"><a class="nav-link" href="#services"><span>Nosotros</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#portfolio"><span>Informacion</span></a></li>
+            </ul>
     </div>
 
     <div class="parallax-content baner-content" id="home">
@@ -46,6 +44,7 @@ https://templatemo.com/tm-526-vanilla
                     <a href="index.html">Ir a Inicio</a>
                 </div>
             </div>
+
         </div>
     </div>
 
