--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/we.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/we.html
@@ -48,12 +48,12 @@ https://templatemo.com/tm-526-vanilla
         </div>
     </div>
 
-
+  <div class="tabs-content">
     <div class="service-content" id="services">
         <div class="container">
             <div class="row">
 
-                <div class="col-md-8">
+                <div class="col-md-8" >
                     <div class="row">
 
                             <div class="service-item">
@@ -69,7 +69,7 @@ La educación adventista transmite no solo conocimiento académico, sino que ade
 
         </div>
     </div>
-
+</div>
 
     <div class="parallax-content projects-content" id="portfolio">
         <div class="container">
@@ -163,7 +163,7 @@ La educación adventista transmite no solo conocimiento académico, sino que ade
                     <section id="first-tab-group" class="tabgroup">
                       <div id="tab1">
                         <img src="img/1st-tab.jpg" alt="">
-                        <p>Please do not re-distribute our template ZIP file on your template collection sites. You can make a screenshot and a link back to our website. This template can be used for personal or commercial purposes by end-users.</p>
+                        <p>INSCRIBITE CON NOSOTROS</p>
                       </div>
                       <div id="tab2">
                         <img src="img/2nd-tab.jpg" alt="">
@@ -178,12 +178,7 @@ La educación adventista transmite no solo conocimiento académico, sino que ade
                         <p>Duis risus nulla, elementum vitae nisi a, ornare maximus nisl. Morbi et vehicula est. Cras at vulputate justo. Cras eu nulla metus. Ut et pretium velit. Pellentesque at neque tristique.</p>
                       </div>
                     </section>
-                    <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                      <li><a href="#tab1" class="active">2008 - 2014</a></li>
-                      <li><a href="#tab2">2014 - 2016</a></li>
-                      <li><a href="#tab3">2016 - 2019</a></li>
-                      <li><a href="#tab4">2019 - Now</a></li>
-                    </ul>
+
                     </div>
                 </div>
             </div>
