--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -34,7 +34,7 @@
 			<nav class="main_nav_container">
 				<div class="main_nav">
 					<ul class="main_nav_list">
-						<li class="main_nav_item"><a href="we.html">Acerca de nosotros</a></li>
+						<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
 						<li class="main_nav_item"><a href="contact.html">Contactanos</a></li>
 
 					</ul>
@@ -65,7 +65,7 @@
 		<div class="menu_inner menu_mm">
 			<div class="menu menu_mm">
 				<ul class="menu_list menu_mm">
-					<li class="main_nav_item"><a href="we.html">Acerca de nosotros</a></li>
+					<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
 					<li class="main_nav_item"><a href="contact.html">Contactanos</a></li>
 
 				</ul>
@@ -445,7 +445,7 @@
 						<div class="footer_column_title">Menu</div>
 						<div class="footer_column_content">
 							<ul>
-								<li class="footer_list_item"><a href="we.html">Acerca de nosotros</a></li>
+								<li class="footer_list_item"><a href="nosotros.html">Acerca de nosotros</a></li>
 								<li class="footer_list_item"><a href="contact.html">Contactanos</a></li>
 
 							</ul>
