--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/we.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/we.html
@@ -52,7 +52,32 @@ https://templatemo.com/tm-526-vanilla
 
 
     <div class="service-content" id="services">
-      
+
+                      <h4>Educación Adventista</h4>
+                <p><b>La Red de Educación Adventista es administrada por la Iglesia Adventista del Séptimo Día y está presente en más de 150 países con cerca de 1,5 millones de estudiantes. En América del Sur, hay más de 270.000 estudiantes en 871 instituciones educativas (escuelas, colegios y universidades) y más de 18 mil profesores.
+
+La educación adventista transmite no solo conocimiento académico,
+sino que además promueve el desarrollo equilibrado e integral de las personas
+– espiritual, intelectual, físico y social. La filosofía adventista de la
+educación se fundamenta en Cristo, por lo que los adventistas creen que bajo
+ la guía del Espíritu Santo, el carácter y los propósitos a desarrollar son los
+  de una vida de fe en Dios
+ y respeto por la dignidad de todos los seres humanos.
+</b>  </p>
+                  <h4>El Creacionismo y la Educación Adventista</h4>
+<p><b>
+¿Por qué enseñar el creacionismo?
+
+El creacionismo es una corriente de estudios interdisciplinarios que tratan de
+ explicar el origen de la vida y del universo, con similitudes y diferencias en
+  relación con la teoría de la evolución y el diseño inteligente. La Red de Educación
+   Adventista enseña el creacionismo, basada en argumentos científicos y lógicos, sin
+    imponer creencias religiosas u omitir la versión evolutiva. Por lo tanto, la
+     enseñanza está en armonía con los requisitos del Ministerio de Educación y
+      Cultura.
+    </b>
+</p>
+
     </div>
 
 
