Correccion errores programa06.html

--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/programa06.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/programa06.html
@@ -275,8 +275,8 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
                             <h2>Control de Articulos</h2>
                         </div>
                         <div class="col-sm-6">
-                            <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Articulo</span></a>
-                            <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
+                            <a href="#addMenú" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Articulo</span></a>
+                            <a href="#deleteMenú" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
                         </div>
                     </div>
                 </div>
@@ -311,8 +311,8 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
                             <td>500</td>
                             <td>medo uso</td>
                             <td>
-                                <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                <a href="#editMenú" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                <a href="#deleteMenú" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                             </td>
                         </tr>
                        
@@ -335,7 +335,7 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
             </div>
         </div>
         <!-- Edit Modal HTML -->
-        <div id="addEmployeeModal" class="modal fade">
+        <div id="addMenú" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <form>
@@ -374,7 +374,7 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
             </div>
         </div>
         <!-- Edit Modal HTML -->
-        <div id="editEmployeeModal" class="modal fade">
+        <div id="editMenú" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <form>
@@ -409,7 +409,7 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
             </div>
         </div>
         <!-- Delete Modal HTML -->
-        <div id="deleteEmployeeModal" class="modal fade">
+        <div id="deleteMenú" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <form>
