--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa06.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa06.html
@@ -1,24 +1,25 @@
 <!-- Copiar el codigo fuente de un crud
 y modificar los datos con la informacion que queramos -->
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bootstrap CRUD Data Table for Database with Modal Form</title>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<style type="text/css">
-    body {
+  <head>
+    <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Bootstrap CRUD Data Table for Database with Modal Form</title>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style type="text/css">
+  /*  body {
         color: #566787;
 		background: #f5f5f5;
 		font-family: 'Varela Round', sans-serif;
 		font-size: 13px;
-	}
+	} */
+
 	.table-wrapper {
         background: #fff;
         padding: 20px 25px;
@@ -223,7 +224,7 @@ $(document).ready(function(){
 });
 </script>
 </head>
-<body>
+<body background="11253228_848256938575763_8141838970849982173_n.jpg">
     <div class="container">
         <div class="table-wrapper">
             <div class="table-title">
@@ -240,10 +241,6 @@ $(document).ready(function(){
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-						<th>
-
-							</span>
-						</th>
                         <th>Comida</th>
                         <th>Precio</th>
 						            <th>Bebidas</th>
@@ -252,160 +249,107 @@ $(document).ready(function(){
                     </tr>
 
                     <tr>
-						<th>
-
-							</span>
-						</th>
-                        <th>Ceviches</th>
+					              <th>Ceviches</th>
                         <th> </th>
 						            <th>Cervezas</th>
                         <th> </th>
                         <th> </th>
                     </tr>
                 </thead>
+
                 <tbody>
                     <tr>
-						<td>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="checkbox1" name="options[]" value="1">
-								<label for="checkbox1"></label>
-							</span>
-						</td>
                         <td>Pescado (grande)</td>
                         <td>$120</td>
 						            <td>Sol</td>
                         <td>$30</td>
                         <td>
-                            <a href="#editMenú" class="Editar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                            <a href="#deleteMenú" class="Eliminar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                            <a href="#editMenú" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                            <a href="#deleteMenú" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                         </td>
                     </tr>
+
                     <tr>
-						<td>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="checkbox2" name="options[]" value="1">
-								<label for="checkbox2"></label>
-							</span>
-						</td>
                         <td> Pulpo (grande)</td>
                         <td>$160</td>
-						<td>Tecate</td>
+						            <td>Tecate</td>
                         <td>$30</td>
                         <td>
-                            <a href="#editMenú" class="Editar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                            <a href="#deleteMenú" class="Eliminar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                            <a href="#editMenú" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                            <a href="#deleteMenú" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                         </td>
                     </tr>
-					<tr>
-						<td>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="checkbox3" name="options[]" value="1">
-								<label for="checkbox3"></label>
-							</span>
-						</td>
-                        <td>Camaron (grande)</td>
+
+					              <tr>
+					              <td>Camaron (grande)</td>
                         <td>$120</td>
 						<td>Indio</td>
                         <td>$30</td>
                         <td>
-                            <a href="#editMenú" class="Editar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                            <a href="#deleteMenú" class="Eliminar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                            <a href="#editMenú" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                            <a href="#deleteMenú" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                         </td>
                     </tr>
+
                     <tr>
+                      <th>Cocteles</th>
+                      <th> </th>
+                      <th>Cocteles clasicos</th>
+                      <th> </th>
+                      <th> </th>
+                    </tr>
 
-            <tr>
-    <th>
-<!--				<span class="custom-checkbox">
-      <input type="checkbox" id="selectAll">
-        <label for="selectAll"></label>
-      </span> -->
-    </th>
-                <th>Cocteles</th>
-                <th> </th>
-                <th>Cocteles clasicos</th>
-                <th> </th>
-                <th> </th>
-            </tr>
 
-            <td>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="checkbox4" name="options[]" value="1">
-								<label for="checkbox4"></label>
-							</span>
-						</td>
                         <td>Pescado (grande)</td>
                         <td>$100</td>
                         <td>Margarita</td>
                 				<td>$45</td>
                         <td>
-                            <a href="#editMenú" class="Editar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                            <a href="#deleteMenú" class="Eliminar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                            <a href="#editMenú" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                            <a href="#deleteMenú" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                         </td>
                     </tr>
-					<tr>
-						<td>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="checkbox5" name="options[]" value="1">
-								<label for="checkbox5"></label>
-							</span>
 
+                    <tr>
                         <td>Pulpo (grande)</td>
                         <td>$100</td>
-						<td>Piña colada</td>
+						            <td>Piña colada</td>
                         <td>$45</td>
                         <td>
-                            <a href="#editMenú" class="Editar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                            <a href="#deleteMenú" class="Eliminar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                            <a href="#editMenú" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                            <a href="#deleteMenú" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                        </td>
+                  </tr>
+
+                    <tr>
+                        <td>Camaron (grande)</td>
+                        <td>$100</td>
+                        <td>Piñada</td>
+                        <td>$40</td>
+                        <td>
+                            <a href="#editMenú" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                            <a href="#deleteMenú" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                         </td>
                     </tr>
 
-                    <td>
-                      <span class="custom-checkbox">
-                        <input type="checkbox" id="checkbox4" name="options[]" value="1">
-                        <label for="checkbox4"></label>
-                      </span>
-                    </td>
-                                <td>Camaron (grande)</td>
-                                <td>$100</td>
-                                <td>Piñada</td>
-                                <td>$40</td>
-                                <td>
-                                    <a href="#editMenú" class="Editar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                    <a href="#deleteMenú" class="Eliminar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                                </td>
-                            </tr>
+                    <tr>
+                        <th>Camarones</th>
+                        <th> </th>
+                        <th>Refrescos</th>
+                        <th> </th>
+                        <th> </th>
+                    </tr>
 
-                            <tr>
-                    <th>
-                <!--				<span class="custom-checkbox">
-                      <input type="checkbox" id="selectAll">
-                        <label for="selectAll"></label>
-                      </span> -->
-                    </th>
-                                <th>Camarones</th>
-                                <th> </th>
-                                <th>Refrescos</th>
-                                <th> </th>
-                                <th> </th>
-                            </tr>
-
-                        <tr>
-                    <td>
-                        <span class="custom-checkbox">
-                          <input type="checkbox" id="checkbox4" name="options[]" value="1">
-                            <label for="checkbox4"></label>
-                        </span>
-                      </td>
-                                <td>Empanizados</td>
-                                <td>$120</td>
-                                <td>Jamaica</td>
-                                <td>$15</td>
-                                <td>
-                                  <a href="#editMenú" class="Editar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                  <a href="#deleteMenú" class="Eliminar" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                                </td>
-                      </tr>
+                      <tr>
+                        <td>Empanizados</td>
+                        <td>$120</td>
+                        <td>Jamaica</td>
+                        <td>$15</td>
+                        <td>
+                           <a href="#editMenú" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                           <a href="#deleteMenú" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                        </td>
+                    </tr>
 
 
                 </tbody>
@@ -414,12 +358,12 @@ $(document).ready(function(){
         </div>
     </div>
 	<!-- Edit Modal HTML -->
-	<div id="addEmployeeModal" class="modal fade">
+	<div id="addMenú" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<form>
 					<div class="modal-header">
-						<h4 class="modal-title">Add Employee</h4>
+						<h4 class="modal-title">Agregar</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
 					<div class="modal-body">
@@ -449,7 +393,7 @@ $(document).ready(function(){
 		</div>
 	</div>
 	<!-- Edit Modal HTML -->
-	<div id="editEmployeeModal" class="modal fade">
+	<div id="editMenú" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<form>
@@ -464,7 +408,7 @@ $(document).ready(function(){
 						</div>
 						<div class="form-group">
 							<label>Precio</label>
-							<input type="email" class="form-control" required>
+					  	<input class="form-control" required>
 						</div>
 						<div class="form-group">
 							<label>Bebidas</label>
@@ -476,15 +420,15 @@ $(document).ready(function(){
 						</div>
 					</div>
 					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-info" value="Save">
+						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
+						<input type="submit" class="btn btn-info" value="Guardar">
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
 	<!-- Delete Modal HTML -->
-	<div id="deleteEmployeeModal" class="modal fade">
+	<div id="deleteMenú" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<form>
