--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/program02.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/program02.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+Sours:          index.html
+Description:    Index del programa 2
+Date:           
 -->
 <html>
-    <head>   
-        <title> PROMEDIOS CALIFICACIONES </title>
+    <head> 
+        <title> PROMEDIOS CALIFICACIONES </title> <!-- titulo de la pestaña -->
 
 
-        <script type='text/javascript' src='program02.js'></script>
+        <script type='text/javascript' src='program02.js'></script> <!-- se obtiene el .js donde esta la funcion -->
 
     </head>
     <body>
         <div id="divGrupo">
             <form>
-                <input type="number" id="inputGrupo" min="1" max="100">
+                <!-- para poner el numero de clificaciones  que se van a insertar -->
+                <input type="number" id="inputGrupo" min="1" max="100"> 
+                <!-- lee y muestra las calificaciones ingresadas -->
                 <button id="buttonGrupo" onclick="leerCalificaciones()">Agregar</button>
             </form>
         </div>
