--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/programa04/index.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/programa04/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <!--
-
+Sours:          index.html
+Description:    Index del programa 4
+Date:           19/Febrero/2019
 
 -->
 <html>
     <head>
 
-        <title>TODO supply a title</title>
+        <title>BARRA DE MENU AUTO AJUSTABLE A DISPOSITIVO</title>
+        <!-- se obtiene los archivos del bootstrap -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1">
