--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/Programm03.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/Programm03.html
@@ -11,7 +11,7 @@ Date:           14 de Febrero de 2019
         <link href="bootstrap-4.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <script src="bootstrap-4.1.3/dist/js/bootstrap.min.js" type="text/javascript"></script>
 
-        <title>TODO supply a title</title>
+        <title>FORMULARIO</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -21,24 +21,27 @@ Date:           14 de Febrero de 2019
         </div>
         <div id="divContenedor">
             <div id="divFormulario">
-                <!-- Formulario -->
+                <!-- codigo para la crecion del Formulario -->
                 <form class="form-signin">
                     <div class="form-group">-
                         <label class="control-label col-sm-2" for="inputUsername">User:</label>    
                         <div class="col-sm-10">
+                            
+                          <!-- se agrega una barra de texto donde siempre mostrara un mensaje previo -->
                             <input class="form-control" name="inputUsername" id="inputUsername" type="text" placeholder="Ejemplo: Mickey" />
+                            <!-- para crear seleccion por punto -->
                         </div>
                         <input name="inputRadio1" id="inputRadio1" type="radio" value="1">Chocolates <br>
                         <input name="inputRadio2" id="inputRadio2" type="radio" value="2">Paletas <br>
                         <input name="inputRadio3" id="inputRadio3" type="radio" value="3">Pastel <br>
                         <input name="inputRadio4" id="inputRadio4" type="radio" value="4">Abrazos <br>         
-                        <input type="number" min="1" max="100" /><br>
-                        <input type="date" /><br>
-                        <input type="email" /><br>
-                        <input type="color"/><br>
-                        <input type="file"/><br>
-                        <input type="password"/><br>
-                        <input type="search" /><br>
+                        <input type="number" min="1" max="100" /><br>                        
+                        <input type="date" /><br> <!-- abre la paleta de fecha -->
+                        <input type="email" /><br> <!-- barra de txto -->            
+                        <input type="color"/><br> <!-- abre la paleta de colores -->
+                        <input type="file"/><br> <!-- busca un archivo -->
+                        <input type="password"/><br> <!-- para contraseña -->
+                        <input type="search" /><br> <!-- para busqueda -->
                         <input name="inputSubmit" id="inputSubmit" type="submit" value="Enviar Información" />
                     </div>
                 </form>
