--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/programa06.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/programa06.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+Sours:          index.html
+Description:    Index del programa 6
+Date:           
 
 https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-table-for-database-with-modal-form
 -->
@@ -12,7 +12,7 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>tabla ejemplo de actividad</title>
+        <title>tabla ejemplo de actividad 6</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,22 +20,26 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <style type="text/css">
+            <!-- en esta parte se le da forma a la pagina  en el cual se incuyte desde el color hasta el tamaño
+            forma de la pagina-->
             body {
-                color: #566787;
-                background: #f5f5f5;
+                color: #F44336;
+                background: #FFC107;
                 font-family: 'Varela Round', sans-serif;
                 font-size: 13px;
             }
-            .table-wrapper {
-                background: #fff;
+            .table-wrapper { 
+                /* fondo de la tabla */
+                background: #005cbf; /*azul*/
                 padding: 20px 25px;
                 margin: 30px 0;
                 border-radius: 3px;
                 box-shadow: 0 1px 1px rgba(0,0,0,.05);
             }
-            .table-title {        
+            .table-title {  
+                /* fondo da la barra principal */
                 padding-bottom: 15px;
-                background: #435d7d;
+                background: #FFC107; /* amarrilo */
                 color: #fff;
                 padding: 16px 30px;
                 margin: -20px -25px 10px;
@@ -298,7 +302,7 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr> <!-- se inserta la informacion de la celda -->
                             <td>
                                 <span class="custom-checkbox">
                                     <input type="checkbox" id="checkbox1" name="options[]" value="1">
@@ -343,6 +347,7 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
                             <h4 class="modal-title">Add Articulo</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         </div>
+                        <!-- ingreso de informacion para agregar a las celdas por medio del area de addarticulo -->
                         <div class="modal-body">					
                             <div class="form-group">
                                 <label>Numero</label>
@@ -382,23 +387,28 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
                             <h4 class="modal-title">Edit Articulo</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         </div>
+                        <!-- para editar articulo --> 
                         <div class="modal-body">					
                             <div class="form-group">
-                                <label>Name</label>
+                                <label>Numero</label>
                                 <input type="text" class="form-control" required>
                             </div>
                             <div class="form-group">
-                                <label>Email</label>
-                                <input type="email" class="form-control" required>
-                            </div>
-                            <div class="form-group">
-                                <label>Address</label>
-                                <textarea class="form-control" required></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label>Phone</label>
+                                <label>Articulo</label>
                                 <input type="text" class="form-control" required>
-                            </div>					
+                            </div>
+                            <div class="form-group">
+                                <label>Marca</label>
+                                <input type="text" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label>Precio</label>
+                                <input type="text" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label>Estado</label>
+                                <input type="text" class="form-control" required>
+                            </div>		
                         </div>
                         <div class="modal-footer">
                             <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
