Correcciones programm02.html Correcciones program02.js

--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programm02.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programm02.html
@@ -4,7 +4,8 @@
 
 
         <script type='text/javascript' src='program02.js'></script>
-
+        <!-- linea de codigo para poder llamar la funcion
+        del .js -->
     </head>
     <body>
         <div id="divGrupo">
